@startuml componentes

title Diagrama de Componentes – RHOS (RH Operation System)

left to right direction
skinparam dpi 180
skinparam shadowing false
skinparam linetype polyline
skinparam nodesep 30
skinparam ranksep 35
skinparam componentStyle rectangle
skinparam backgroundColor #FFFFFF
skinparam defaultFontSize 14
skinparam component {
  BackgroundColor #EFF6FF
  BorderColor #255F71
  FontColor #1A1A1A
  FontSize 14
}
skinparam database {
  BackgroundColor #FFF7ED
  BorderColor #F48C68
  FontColor #1A1A1A
  FontSize 14
}
skinparam package {
  BackgroundColor #F8FAFB
  BorderColor #CBD5E1
  FontColor #1A1A1A
  FontSize 15
}
skinparam ArrowColor #255F71

' ── Flutter App ──────────────────────────────────────────────────
package "RH-OS App (Flutter)" {

  package "Presentation" {
    [TelaLogin]         as TL
    [TelaHome]          as TH
    [TelaCurriculos]    as TC
    [TelaVagas]         as TV
    [TelaDashboard]     as TD
    [TelaAdmin]         as TA
    [TelaMais]          as TM
  }

  package "Domain" {
    [AutenticarUsuario]         as AU
    [ListarCandidatos]          as LC
    [SalvarCandidato]           as SC
    [UploadCurriculo]           as UC
    [RanquearCandidatos]        as RC
    [RankingService]            as RS
    [ListarVagas]               as LV
    [SalvarVaga]                as SV
    [VerificarDuplicidade]      as VD
    [MergeCandidato]            as MC
    [ListarCandidaturasPorVaga] as LCP

    interface ICandidatoRepositorio as IC
    interface IVagaRepositorio      as IV
    interface ICandidaturaRepositorio as ICA
    interface IUsuarioRepositorio   as IU
  }

  package "Data" {
    [FirebaseAuthService]              as FAS
    [CandidatoRepositorioFirestore]    as CRF
    [VagaRepositorioFirestore]         as VRF
    [CandidaturaRepositorioFirestore]  as CAF
    [RankingRepositorioFirestore]      as RRF
    [EntrevistaRepositorioFirestore]   as ERF
    [UsuarioRepositorioFirestore]      as URF
    [PdfParser]                        as PP
    [TxtParser]                        as TP
    [ExtratorDados]                    as ED
    [GeminiOcrService]                 as GEM
  }

  package "Core" {
    [AppTema]    as AT
    [AppRoutes]  as AR
    [Injecao]    as IN
  }
}

' ── Firebase ─────────────────────────────────────────────────────
package "Google Firebase" {
  database "Firebase Auth"    as FA
  database "Cloud Firestore"  as CF
}

' ── Google AI ────────────────────────────────────────────────────
package "Google AI" {
  [Gemini 2.5 Flash API] as GAPI
}

' ── Presentation → Domain ────────────────────────────────────────
TL  -right-> AU
TC  -right-> LC
TC  -right-> UC
TC  -right-> VD
TV  -right-> RC
TV  -right-> RS
TV  -right-> LV
TD  -right-> LC
TA  -right-> IU
TM  -right-> IU

' ── Domain → Interfaces ──────────────────────────────────────────
AU  -right-> IU
LC  -right-> IC
SC  -right-> IC
VD  -right-> IC
MC  -right-> IC
RC  -right-> IV
LV  -right-> IV
SV  -right-> IV
LCP -right-> IV
LCP -right-> ICA

' ── Interfaces → Implementações ─────────────────────────────────
IU  -right.-> URF : implementa
IC  -right.-> CRF : implementa
IV  -right.-> VRF : implementa
ICA -right.-> CAF : implementa

' ── Implementações → Firebase ────────────────────────────────────
FAS --> FA
URF --> FA
URF --> CF
CRF --> CF
VRF --> CF
CAF --> CF
RRF --> CF
ERF --> CF

' ── Upload pipeline ──────────────────────────────────────────────
UC  --> PP
UC  --> TP
UC  --> ED
UC  --> GEM
GEM --> GAPI : API Key (--dart-define)

' ── Core ─────────────────────────────────────────────────────────
IN  ..> CRF : registra
IN  ..> VRF : registra
IN  ..> CAF : registra
IN  ..> RRF : registra
IN  ..> ERF : registra
IN  ..> URF : registra
IN  ..> GEM : registra

@enduml
